# PathToCsv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _typos.toml  path_to_csv.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yaml
tests/: __init__.py  requirements.txt  test_path_to_csv.py
